edition = "2023";

package wayplatform.connect.tachograph.dd.v1;

import "google/protobuf/timestamp.proto";
import "wayplatform/connect/tachograph/dd/v1/specific_condition_type.proto";

// Represents information related to a specific condition.
//
// See Data Dictionary, Section 2.152, `SpecificConditionRecord`.
//
// ASN.1 Definition:
//
//     SpecificConditionRecord ::= SEQUENCE {
//         entryTime TimeReal,
//         specificConditionType SpecificConditionType
//     }
message SpecificConditionRecord {
  // The date and time of the entry.
  //
  // See Data Dictionary, Section 2.162, `TimeReal`.
  google.protobuf.Timestamp entry_time = 1;

  // The code identifying the specific condition.
  //
  // See Data Dictionary, Section 2.154, `SpecificConditionType`.
  SpecificConditionType specific_condition_type = 2;

  // Stores the raw protocol value when an unrecognized enum value is
  // encountered during parsing.
  int32 unrecognized_specific_condition_type = 3;
}

